<resources>
    <string name="app_name">kRemote</string>
    <string name="app_version">v1.0.5</string>
    <string name="connectToVLCButton"> Connect to VLC </string>
    <string name="messageOnConnectToVLCFailure">No VLC Server found</string>
    <string name="menuItem1">Pre Requisites</string>
    <string name="menuItem2">Settings</string>
    <string name="menuItem3">About</string>
    <string name="PREF_FILE1">My_Pref_File1</string>
    <string name="about_share_text">share with your family and friends</string>
    <string name="about_make">Made with ♥ in India.</string>
    <string name="rate_app"> kRemote? Rate us on playstore </string>

    <string name="admob_app_id">
        ca-app-pub-1533259080190708~1717016636</string>

    <string name="admob_interstitial_id">
        ca-app-pub-1533259080190708/7510245276</string>

    <string name="admob_app_id_test">
        ca-app-pub-3940256099942544~3347511713</string>

    <string name="admob_interstitial_id_test">
        ca-app-pub-3940256099942544/1033173712</string>



</resources>
