<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kushal.kremote.activities.AboutActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_logo"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="start"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:id="@+id/tv_app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_logo"
                            android:gravity="start"
                            android:padding="10dp"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_app_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_app_name"
                            android:layout_marginBottom="2dp"
                            android:gravity="start"
                            android:padding="10dp"
                            android:text="@string/app_version"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/tv_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_app_version"
                            android:layout_marginBottom="2dp"
                            android:textColor="@color/colorBlue"
                            android:gravity="start"
                            android:padding="10dp"
                            android:textSize="16sp" />


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_website"
                        android:layout_marginBottom="2dp"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/about_share_text"
                        android:textColor="@color/colorGrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/img_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="20dp">

                        <ImageView
                            android:id="@+id/img_fb"
                            style="?android:borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_social_facebook_64dp" />

                        <ImageView
                            android:id="@+id/img_insta"
                            style="?android:borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_social_instagram_64dp" />

                        <ImageView
                            android:id="@+id/img_twitter"
                            style="?android:borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_social_twitter_64dp" />

                        <ImageView
                            android:id="@+id/img_whatsapp"
                            style="?android:borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_social_whatsapp_64dp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tv_playstore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_options"
                    android:layout_marginBottom="2dp"
                    android:drawableStart="@drawable/ic_nav_favorite_pink_24dp"
                    android:drawablePadding="4dp"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/rate_app"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_store"
                android:layout_margin="8dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/about_make"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
